propromo.ops/core/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: propromo-core
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: propromo-core
  template:
    metadata:
      labels:
        app: propromo-core
    spec:
      containers:
        - image: ghcr.io/propromo-software/propromo:v2024.12.05.04
          name: propromo
          volumeMounts:
            - mountPath: /etc/php82/conf.d/settings.ini
              subPath: settings.ini
              name: config
          ports:
            - containerPort: 8080
      volumes:
        - name: config
          configMap:
            name: propromo-config
