propromo.ops/core/service.yml
apiVersion: v1
kind: Service
metadata:
  name: propromo-core
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: propromo-core
