propromo.ops/core/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: propromo-core
spec:
  ingressClassName: nginx
  rules:
    - host: it200250.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: propromo-core
                port:
                  number: 80
